sfdx-source/force-app/main/default/objects/Log__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <description>LEM-81: This field is used to store Id of the batch job which created the log.</description>
    <label>Batch Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>