sfdx-source/force-app/main/default/objects/Log__c/fields/Business_Error_Logs_Report_Link__c.field-meta.xml
<CustomField>
    <fullName>Business_Error_Logs_Report_Link__c</fullName>
    <description>LEM-10033, LEM-11499: It navigates to the business Account having &apos;Store/Work Order Association Failures&apos;.</description>
    <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_540, FIND($CustomMetadata.Static_Configurations__mdt.Enterprise_Server_URL_Search_Key.Configuration_Value__c, $Api.Enterprise_Server_URL_540, 0) - 1) + $CustomMetadata.Static_Configurations__mdt.Store_Related_Services_URL_Prefix.Configuration_Value__c + Parent_Account_Id_18__c + $CustomMetadata.Static_Configurations__mdt.FigmentCaseURLSuffix.Configuration_Value__c , $CustomMetadata.Static_Configurations__mdt.Business_Error_Logs_Report_Name.Configuration_Value__c)</formula>
    <label>Business Error Logs Report Link</label>
    <type>Text</type>
</CustomField>