sfdx-source/force-app/main/default/objects/Log__c/fields/Callout_Request_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Callout_Request_Endpoint__c</fullName>
    <description>LEM-81: This field is used to store URL of the endpoint used in callout.</description>
    <label>Callout Request Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>