sfdx-source/force-app/main/default/objects/Log__c/fields/Callout_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Callout_Status_Code__c</fullName>
    <description>LEM-81: This field is used to store Status code of callout.</description>
    <label>Callout Status Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>