sfdx-source/force-app/main/default/objects/Log__c/fields/Franchise_Parent_Account_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Parent_Account_Id_18__c</fullName>
    <description>LEM-11497: It stores the 18 digit Id of the franchise parent Account of store for which store association failed.</description>
    <label>Franchise Parent Account Id 18</label>
    <length>18</length>
    <type>Text</type>
</CustomField>