sfdx-source/force-app/main/default/objects/Log__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <description>LEM-81: This field used to store type of exception.</description>
    <label>Log Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>