sfdx-source/force-app/main/default/objects/Log__c/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <description>LEM-81: This field is used to store Source of the error.</description>
    <label>Quiddity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>