sfdx-source/force-app/main/default/objects/Log__c/fields/Recipient_Ids_To_Send_Notification__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Ids_To_Send_Notification__c</fullName>
    <description>LEM-11497: It stores the list of Owner Ids to send a Log&apos;s email notification. It currently considers Parent Account Owner, Franchise Parent Account Owner and Parent Work Order Owner for the email notification.</description>
    <label>Recipient Ids To Send Notification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>