sfdx-source/force-app/main/default/objects/Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>LEM-81: This field is used to store record id of the records which causes the log.</description>
    <label>Record Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>