sfdx-source/force-app/main/default/objects/Log__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <description>LEM-81: This field is used to capture the universally unique execution id.</description>
    <label>Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>