sfdx-source/force-app/main/default/objects/Log__c/fields/Send_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-10033: It indicates whether to notify the parent Account Owner on Log creation.</description>
    <label>Send Notification</label>
    <type>Checkbox</type>
</CustomField>