sfdx-source/force-app/main/default/objects/Log__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>LEM-7850 - field to group Log__c record by service it was run under, across systems, if integration is involved</description>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>