sfdx-source/force-app/main/default/objects/Log__c/fields/Store_Account_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Store_Account_Id_18__c</fullName>
    <description>LEM-10033: It stores the 18 digit Id of the store Account for which store association failed.</description>
    <label>Store Account Id 18</label>
    <length>18</length>
    <type>Text</type>
</CustomField>