sfdx-source/force-app/main/default/objects/Log__c/fields/Store_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Account_Name__c</fullName>
    <description>LEM-10033: It stores the name of the store Account for which store association failed.</description>
    <label>Store Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>