sfdx-source/force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Class_Method_Name__c</columns>
    <columns>Log_Type__c</columns>
    <columns>Quiddity__c</columns>
    <columns>Severity_Level__c</columns>
    <columns>Service__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>